--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -1,7 +1,6 @@
 .Hero {
-  background: #1f1f1f
-    url(https://images.unsplash.com/photo-1482731215275-a1f151646268?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80)
-    no-repeat center center;
+  background: #1f1f1f url("../../assets/Images/Hero.jpg") no-repeat center
+    center;
 
   background-size: cover !important;
 }
