--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -1,6 +1,6 @@
 .Hero {
-  background: #1f1f1f url("../../assets/Images/Hero.jpg") no-repeat center
-    center;
+  background: #1f1f1f url("../../assets/Images/Hero-medium.jpg") no-repeat
+    center center;
 
   background-size: cover !important;
 }
