--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -4,3 +4,9 @@
 
   background-size: cover !important;
 }
+.Hero-small {
+  background: #1f1f1f url("../../assets/Images/Hero-small.jpg") no-repeat center
+    center;
+
+  background-size: cover !important;
+}
